k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fun-food-times-user-management
  labels:
    app: fun-food-times-user-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fun-food-times-user-management
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: fun-food-times-user-management
    spec:
      containers:
        - image: <IMAGE>
          name: fun-food-times-user-management
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readiness
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: fun-food-times-lm
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: fun-food-times-user-management
