k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # Ensures paths are routed correctly
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  rules:
    - host: king-prawn-app-iog8u.ondigitalocean.app
      http:
        paths:
          - path: /user-management
            pathType: Prefix
            backend:
              service:
                name: fun-food-times-user-management
                port:
                  number: 80
